fix: add z-index to loader

--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -10,6 +10,7 @@ $time: 3000ms;
   left: 0;
   right: 0;
   margin: auto;
+  z-index: -1;
 
   svg {
     position: absolute;
